--- a/src/pages/About/Director.css
+++ b/src/pages/About/Director.css
@@ -116,7 +116,7 @@
         width: 90% !important;
         height: 90%;
     }
-    .imgWrap:nth-child(1) {
+    /* .imgWrap:nth-child(1) {
     margin-top:120px;
-    }
+    } */
     }
