--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,21 @@ input:focus, textarea:focus, select:focus{
     position: relative;
     content: "" !important;
 }
+.scroll-to-top {
+    right: 40px;
+    bottom: 40px;
+    position: fixed;
+    cursor: pointer;
+    border-radius: 8px;
+    width: 50px;
+    height: 50px;
+    border: none;
+    background: #FF3D00 !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999 !important;
+}
 @media only screen and (max-width:1024px){
     .css-lfwcke-MuiTabs-flexContainer {
         display: flex !important;
