--- a/src/components/Banner/HeroSection/HeroSection.css
+++ b/src/components/Banner/HeroSection/HeroSection.css
@@ -129,13 +129,19 @@ background: radial-gradient(farthest-side at 80% 80%, #FF333D, #F87015, #541283f
     height: 95vh;
     width:100%;
   }
+  .header:before {
+    height: 100%;
+    clip-path: none;
+  background: none;
+    
+  }
   .navsBarWrap{
     width:100%;
   }
-  .header:before {
+  /* .header:before {
     clip-path: polygon(0px 10%, 0 100%, 100% 100%);
     
-  }
+  } */
   .left-side h1 {
     font-size: 45px;
 }
