--- a/src/pages/SingleService/SingleService.css
+++ b/src/pages/SingleService/SingleService.css
@@ -57,6 +57,10 @@
 .portfolioTitle{
     width:1000px !important;
 }
+.singleServicessContent{
+    width:800px;
+    margin:0 auto;
+}
 
 @media only screen and (max-width:1024px){
     .ecommerServices{
@@ -85,6 +89,9 @@
 .singleServicePortFolio{
     width:370px !important;
 }
+.singleServicessContent{
+    width:100%;
+}
 
 .singleServicesWrap{
     padding:0 10px;
@@ -99,4 +106,9 @@
     .leftSideServices{
         width:100%;
      }
+     .singleServicessContent h3{
+        font-size: 15px;
+    }
+
+
     }
